--- a/assets/css/traductor.css
+++ b/assets/css/traductor.css
@@ -1,7 +1,6 @@
 
 .traductor {
-    padding: 2rem 1rem;
-    margin-top: 1rem;
+    margin: 1rem 0rem;
     min-height: 200px;
     height: auto;
     background-color: var(--bg-boton-azul-transparente);
@@ -10,15 +9,22 @@
 
 .traductor__titulo {
     color: var(--texto-blanco-boton);
+    text-align: center;
+    padding-top: 10px;
 }
 .form {
     margin-top: 10px;
 }
 .form__input {
+    color: #EEE;
     border: none;
+    font-size: 17px;
     outline: none;
+    padding: 0 1rem;
     background-color: transparent;
     width: 100%;
+    height: 2rem;
+
 }
 
 .form__input::placeholder {
@@ -26,6 +32,8 @@
     font-size: 16px;
     font-weight: 300;
 }
-
+.form__input--salida {
+    padding-bottom: 1rem;
+}
 
 
